fixed z-indexes

--- a/src/app/components/background/backgorund-element/backgorund-element.component.scss
+++ b/src/app/components/background/backgorund-element/backgorund-element.component.scss
@@ -10,7 +10,7 @@ path, line, circle, rect{
 
 svg{
   opacity: 0.35;
-  z-index:0;
+  z-index:auto;
   position: fixed;
   top:var(--positionX);
   left:var(--positionY);
