--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -8,10 +8,16 @@
   width: auto;
 }
 
+header{
+  z-index: 1;
+}
+
 mat-toolbar{
   display:flex;
   justify-content: space-between;
   flex-direction: row;
+  position: relative;
+  z-index: 1;
 }
 
 @media only screen and (max-width: 600px) {
