--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,6 @@
 
 *{
   box-sizing: border-box;
-  z-index: 3;
 }
 
 html, body {
